# Python_Modules

./: .gitignore
Python_Module_00/: .gitignore
Python_Module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Python_Module_00/ex7/: ft_seed_inventory.py
Python_Module_01/ex1/: ft_garden_data.py
Python_Module_01/ex2/: ft_plant_growth.py
Python_Module_01/ex3/: ft_plant_factory.py
Python_Module_01/ex4/: ft_garden_security.py
Python_Module_01/ex5/: ft_plant_types.py
Python_Module_01/ex6/: ft_garden_analytics.py
Python_Module_02/ex0/: ft_first_exception.py
Python_Module_02/ex1/: ft_different_errors.py
Python_Module_02/ex2/: ft_custom_errors.py
Python_Module_02/ex3/: ft_finally_block.py
Python_Module_02/ex4/: ft_raise_errors.py
Python_Module_02/ex5/: ft_garden_management.py
Python_Module_03/ex0/: ft_command_quest.py
Python_Module_03/ex1/: ft_score_analytics.py
Python_Module_03/ex2/: ft_coordinate_system.py
Python_Module_03/ex3/: ft_achievement_tracker.py
Python_Module_03/ex4/: ft_inventory_system.py
Python_Module_03/ex5/: ft_data_stream.py
Python_Module_03/ex6/: ft_analytics_dashboard.py
Python_Module_04/ex0/: ft_ancient_text.py
Python_Module_06/: ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py
Python_Module_07/: battle.py  capacitor.py  mypy.ini  tournament.py
Python_Module_08/ex1/: pyproject.toml
ex0/: construct.py
ex1/: loading.py  requirements.txt
ex2/: oracle.py  requiremts.txt
(+26 files in other folders)
