[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Matrix loading exercise"
authors = ["nadoho <nadoho@student.42lehavre.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.3.3"
numpy = "2.2.6"
matplotlib = "3.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
